syntax = "proto3";

package secret.v1;

message SetSecretRequest {
    string name = 1;
    string value = 2;
}

message SetSecretResponse {
}

message GetSecretRequest {
    string name = 1;
}

message GetSecretResponse {
    string value = 1;
    bool exists = 2;
}

service SecretService {
    rpc SetSecret(SetSecretRequest) returns (SetSecretResponse) {}
    rpc GetSecret(GetSecretRequest) returns (GetSecretResponse) {}
}
